# guardmcp

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  FEATURES.md  INSTALL.md  LICENSE  QUICKSTART.md  README.md  RELEASE_NOTES.md  SECURITY.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  FEATURE_STATUS.md  PLUGIN_AUTHORS.md  PROJECT_SSOT.md
docs/superpowers/plans/: 2026-06-23-guardmcp-v0.1.md  2026-07-01-query-planning-pipeline.md  2026-07-02-field-semantics.md  2026-07-03-multi-db-governance-phase1.md  2026-07-03-multi-db-phase2.md  2026-07-04-cross-database-relationships.md  2026-07-04-multi-db-phase3.md  2026-07-07-cross-db-v2-signal3.md
docs/superpowers/specs/: 2026-07-01-query-planning-pipeline-design.md  2026-07-02-field-semantics-design.md  2026-07-03-multi-database-governance-design.md  2026-07-03-multi-db-phase2-backend-design.md  2026-07-04-cross-database-relationships-design.md  2026-07-04-multi-db-phase3-tool-exposure-design.md  2026-07-07-cross-db-v2-signal3-design.md
evals/cases/approval/: delete_many_requires_approval.yaml  insert_allowed_without_approval.yaml  unscoped_delete_escalates.yaml  unscoped_update_escalates.yaml  (+1 more)
graphify-out/: .graphify_labels.json  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
policies/: example.yaml  test_stdio.yaml
src/guardmcp/: __main__.py  cli.py  config.py
tests/: conftest.py
tests/conformance/: test_builtin_conformance.py
tests/integration/: test_adversarial_behavior.py  test_connection_usecases.py  test_cross_db_relationships.py  test_cross_db_signal3_integration.py  test_field_semantics_integration.py  test_live_backends.py  test_multi_db_governance.py  test_multi_db_phase2.py  test_multi_db_phase3.py  test_new_features.py  test_performance.py  test_pipeline.py  test_planning_security.py  test_rate_limit_integration.py  test_transport_lifecycle.py
tests/unit/: test_active_database_holder.py  test_aggregate_cap.py  test_aggregate_db.py  test_aggregation_guard.py  test_ambiguity_detector.py  test_approval_api_endpoints.py  test_approval_store.py  test_audit_logger.py  test_audit_persistent_handle.py  test_audit_verify.py  test_capability_adapter.py  test_capability_request_fields.py  test_cli_dispatch.py  test_collection_storage_size.py  test_connections.py  test_connections_config.py  test_context_models.py  test_context_tool.py  test_cost_aware_risk_escalation.py  test_cost_estimate.py  test_create_rename_collection_tool.py  test_cross_db_matcher.py  test_cross_db_models.py  test_cross_db_paths.py  test_cross_db_resolver.py  test_cross_db_resolver_signal3.py  test_cross_db_signal3.py  test_describe_collection_semantics.py  test_discovery_database.py  test_dns_rebinding.py  test_doctor.py  test_dotted_mask.py  test_drop_collection_tool.py  test_error_contract.py  test_evaluate_capability.py  test_executor_database_routing.py  test_explain_masking.py  test_explain_policy.py  test_export_tool.py  test_field_allow_integration.py  (+64 more)
(+135 files in other folders)
